# Kasforge

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  synchronization.rs
src-tauri/src/class/: mod.rs  payload.rs  prelude.rs  synchronization.rs
src/module/: index.jsx
src/module/Home/: Home.jsx  home.css
